fix header gap at page top

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,6 +73,7 @@ body {
   /* TABLET */
   .company {
     margin: 0;
+    position: static;
   }
 
   .background {
